--- a/ToDo
+++ b/ToDo
@@ -1,7 +1,7 @@
 Werde mein bestes geben, mich diese Woche noch damit (↓) auseinander zu setzen. Was ich nicht schaffe wird peu a peu über die freie Zeit passieren im Jahreswechsel und in der letzten Woche vor der Präsentation. 
 
 Website: 
-tinder style
+tinder style ✅
 ⁠how our mentoring program works ✅
     --included in base page
 ⁠“staff“/mentors
@@ -12,7 +12,7 @@ tinder style
     ⁠choose from a few options in the end after sorting out
 English / maybe german possible in the end
 ⁠Login/registration page (mentors & mentees)
-    -- basic register und login functionality is implemented
+    -- basic register und login functionality is implemented ✅
 ⁠what we do 
 ⁠schedule a meeting (with email reply)
 ⁠Uni sso login / email registration for students only (?) [dass muss ich wahrscheinlich erstmal skippen]
