changed click feature and language

--- a/ToDo
+++ b/ToDo
@@ -15,7 +15,7 @@ English / maybe german possible in the end
     -- basic register und login functionality is implemented ✅
 ⁠what we do 
 ⁠schedule a meeting (with email reply)
-⁠Uni sso login / email registration for students only (?) [dass muss ich wahrscheinlich erstmal skippen]
+email registration for students only (?) [dass muss ich wahrscheinlich erstmal skippen]
 ⁠get help
 
 
