Changed Menu style

--- a/ToDo
+++ b/ToDo
@@ -15,8 +15,8 @@ English / maybe german possible in the end
     -- basic register und login functionality is implemented ✅
 ⁠what we do 
 ⁠schedule a meeting (with email reply)
-email registration for students only (?) [dass muss ich wahrscheinlich erstmal skippen]
-⁠get help
+email registration for students only (?) [dass muss ich wahrscheinlich erstmal skippen] ✅
+⁠what we do 
 
 
 
