added different logins for mentors and mentees and different views depending on the thing you logged in as

--- a/ToDo
+++ b/ToDo
@@ -4,19 +4,18 @@ Website:
 tinder style ✅
 ⁠how our mentoring program works ✅
     --included in base page
-⁠“staff“/mentors
+⁠“staff“/mentors ✅
 ⁠CV checklist
 ⁠Get help
 ⁠profile page
     ⁠algorithm for sorting
     ⁠choose from a few options in the end after sorting out
 English / maybe german possible in the end
-⁠Login/registration page (mentors & mentees)
+⁠Login/registration page (mentors & mentees) ✅
     -- basic register und login functionality is implemented ✅
 ⁠what we do 
 ⁠schedule a meeting (with email reply)
 email registration for students only (?) [dass muss ich wahrscheinlich erstmal skippen] ✅
-⁠what we do 
 
 
 
