--- a/ToDo
+++ b/ToDo
@@ -5,16 +5,16 @@ tinder style ✅
 ⁠how our mentoring program works ✅
     --included in base page
 ⁠“staff“/mentors ✅
-⁠CV checklist
-⁠Get help
+⁠CV checklist ✅
+⁠Get help ✅
 ⁠profile page
-    ⁠algorithm for sorting
-    ⁠choose from a few options in the end after sorting out
-English / maybe german possible in the end
+    --- ⁠algorithm for sorting
+    ⁠--- choose from a few options in the end after sorting out
+ --- English / maybe german possible in the end
 ⁠Login/registration page (mentors & mentees) ✅
     -- basic register und login functionality is implemented ✅
 ⁠what we do 
-⁠schedule a meeting (with email reply)
+⁠schedule a meeting (with email reply) 
 email registration for students only (?) [dass muss ich wahrscheinlich erstmal skippen] ✅
 
 
